k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-records-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-records-api
  template:
    metadata:
      labels:
        app: finance-records-api
    spec:
      containers:
        - name: finance-records-api
          image: ghcr.io/fahmi-dot/finance-records-api:latest
          ports:
            - containerPort: 8080
